# Decawork

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  setup_vps.sh
admin_panel/: app.py  database.py
admin_panel/static/: style.css
admin_panel/templates/: base.html  dashboard.html  licenses.html  user_create.html  user_detail.html  users.html
agent/: orchestrator.py  run.py
slack_bot/: __init__.py  bot.py
